@@ -9,6 +9,9 @@ Add new items to top.
   Src: MainFrm.cpp
  PATCH: [ 1489098 ] Doesn't open Help TOC correctly
   Src: MainFrm.cpp
+ BUG: [ 1487856 ] Long delay if many language dlls
+  Src: Merge.cpp
+  Src/Common: LanguageSelect.cpp LanguageSelect.h
 
 2006-05-15 Gal
  PATCH: [ 1488637 ] PHP/ASP Syntax Highlighting Fix (Bug 1441643)
